[package]
name = "spez"
version = "0.1.0"
authors = ["Mara Bos <m-ou.se@m-ou.se>"]
edition = "2018"
license = "BSD-2-Clause"
description = "Macro to specialize on the type of an expression"
repository = "https://github.com/m-ou-se/spez"
documentation = "https://docs.rs/spez"
readme = "README.md"
keywords = ["autoref", "autoderef", "specialization", "specialisation"]
categories = ["rust-patterns", "development-tools", "development-tools::procedural-macro-helpers"]

[dependencies]
proc-macro-hack = "0.5.11"
spez-macros = { version = "=0.1.0", path = "macros" }
