[package]
name = "spez"
version = "0.1.1"
authors = ["Mara Bos <m-ou.se@m-ou.se>"]
edition = "2021"
license = "BSD-2-Clause"
description = "Macro to specialize on the type of an expression"
repository = "https://github.com/m-ou-se/spez"
documentation = "https://docs.rs/spez"
readme = "README.md"
keywords = ["autoref", "autoderef", "specialization", "specialisation"]
categories = ["rust-patterns", "development-tools", "development-tools::procedural-macro-helpers", "no-std"]

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full"] }
