[package]
name = "spez-macros"
version = "0.1.0"
authors = ["Mara Bos <m-ou.se@m-ou.se>"]
edition = "2018"
license = "BSD-2-Clause"
description = "proc_macro crate for spez"
repository = "https://github.com/m-ou-se/spez"
documentation = "https://docs.rs/spez"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5.11"
proc-macro2 = "1.0.7"
quote = "1.0.2"
syn = { version = "1.0.13", features = ["full"] }
